--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.3",
+    "formidable": "^2.0.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "redis": "^3.1.2",
